# CM2US

./: .gitignore  README.md
arxiv-mcp/: README.md  TUTORIAL.md  arxiv_server.py  arxiv_server_sdk.py  pyproject.toml  setup.sh  test_client.py
embedding/: __init__.py  pyproject.toml
embedding/evaluation/: __init__.py  benchmark_runner.py  cmm_benchmark_spec.py
embedding/training/: __init__.py  alignment_training.py  corpus_builder.py  paired_data_loader.py
google-scholar-api/: .env.example  CHEATSHEET.md  README.md  chat.py  cli.py  phi4_chat.py  pyproject.toml
google-scholar-api/examples/: anthropic_example.py  basic_usage.py  ollama_example.py  openai_example.py
google-scholar-api/scholar/: __init__.py  search.py  tools.py
google-scholar-mcp/: README.md  pyproject.toml  server.py
